<resources>
    <string name="app_name">NotSantander</string>
    <string name="santander" translatable="false">Santander</string>
    <string name="menu_notification">Notificações</string>
    <string name="available_balance">Saldo disponível</string>
    <string name="balance_limit">Saldo + Limite:</string>
    <string name="see_bank_statement">Ver Extrato</string>
    <string name="transfer">Transferir</string>
    <string name="pay">Pagar</string>
    <string name="recharge">Recarga</string>
    <string name="final_card_numbers">%1$s</string>
    <string name="hello">Olá, %1$s</string>
    <string name="available_balance_cash">R$ %1$s</string>
    <string name="balance_limit_cash">R$ %1$s</string>
    <string name="agency">Ag %1$s</string>
    <string name="account">Cc %1$s</string>
    <string name="final_card">Cartão Final</string>

</resources>